add Account/MyAccount models, simplify deploy script

--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,3 @@
 bucket=xxxxx-privateconfbucket-xxxxx
 aws_profile=yourAwsProfile
+#local=1 # uncomment to deploy to your local s3 server at http://localhost:4572 (Localstack)
