--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@tradle/models-template",
   "version": "1.0.0",
   "main": "index.js",
-  "description": "template for building, editing and deploying Tradle models to your Tradle MyCloud",
+  "description": "template for building, editing and deploying Tradle models, styles and configuration to your Tradle MyCloud",
   "repository": {
     "type": "git",
     "url": "https://github.com/tradle/models-template"
@@ -11,13 +11,17 @@
   "license": "MIT",
   "scripts": {
     "lint": "eslint --quiet --ext .json --ext .js .",
-    "validate": "validate-model ./models.json --depends-on @tradle/models --depends-on @tradle/custom-models",
-    "merge": "npm run lint && pack-models -i ./models -o ./models.json",
+    "validate:models": "validate-model ./models.json --depends-on @tradle/models --depends-on @tradle/custom-models",
+    "validate:styles": "node ./validate-styles.js",
+    "mergemodels": "npm run lint && pack-models -i ./models -o ./models.json",
     "postpublish": "git push -u",
-    "build": "npm run merge && npm run validate",
+    "build": "npm run build:styles && npm run build:models",
+    "build:models": "npm run mergemodels && npm run validate:models",
+    "build:styles": "npm run validate:styles",
     "precommit": "npm run build && git add models.json",
-    "predeploy": "npm run build",
-    "deploy": "./deploy.sh"
+    "predeploy:models": "npm run build:models",
+    "deploy:models": "./deploy-models.sh",
+    "deploy:styles": "./deploy-styles.sh"
   },
   "keywords": [
     "tradle",
@@ -38,6 +42,7 @@
     "husky": "^0.13.1"
   },
   "dependencies": {
+    "@tradle/validate-resource": "^2.13.0",
     "minimist": "^1.2.0",
     "typeforce": "^1.10.6",
     "write-file-atomic": "^1.1.4"
