--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,4 @@
 bucket=xxxxx-privateconfbucket-xxxxx
 aws_profile=yourAwsProfile
+stack_name=tradle-dev
 #local=1 # uncomment to deploy to your local s3 server at http://localhost:4572 (Localstack)
