fix: ignore non-existent files in validation, improve readme, colorize init script

--- a/package.json
+++ b/package.json
@@ -16,18 +16,25 @@
     "validate:models": "validate-model ./conf/models.json --depends-on @tradle/models --depends-on @tradle/custom-models",
     "validate:style": "node ./lib/validate-style.js ./conf/style.json",
     "validate:botconf": "node ./lib/validate-botconf.js ./conf/bot.json",
+    "validate:terms": "node ./lib/validate-terms.js ./conf/terms-and-conditions.md",
     "mergemodels": "npm run lint && pack-models -i ./models -o ./conf/models.json",
     "postpublish": "git push -u",
-    "build": "npm run build:style && npm run build:models && npm run build:botconf",
+    "build": "npm run build:style && npm run build:models && npm run build:botconf && npm run build:terms",
     "build:models": "npm run mergemodels && npm run validate:models",
     "build:style": "npm run validate:style",
     "build:botconf": "npm run validate:botconf",
+    "build:terms": "npm run validate:terms",
     "precommit": "npm run build && git add models.json",
     "deploy": "./scripts/deploy.sh",
     "deploy:models": "./scripts/push-to-s3.sh conf/models.json",
     "deploy:style": "./scripts/push-to-s3.sh conf/style.json",
     "deploy:botconf": "./scripts/push-to-s3.sh conf/bot.json",
+    "deploy:terms": "./scripts/push-to-s3.sh conf/terms-and-conditions.md",
     "deploy:local": "local=1 npm run deploy",
+    "deploy:local:models": "local=1 npm run deploy:models",
+    "deploy:local:style": "local=1 npm run deploy:style",
+    "deploy:local:botconf": "local=1 npm run deploy:botconf",
+    "deploy:local:terms": "local=1 npm run deploy:terms",
     "postdeploy": "./scripts/postdeploy.sh",
     "load": "./scripts/load-from-s3.sh"
   },
@@ -39,19 +46,17 @@
     "url": "https://github.com/tradle/configure-tradle/issues"
   },
   "homepage": "https://github.com/tradle/configure-tradle",
-  "devDependencies": {
-    "@tradle/custom-models": "github:tradle/custom-models#640158c",
-    "@tradle/models": "github:tradle/models#a270631",
+  "dependencies": {
+    "@tradle/custom-models": "github:tradle/custom-models",
+    "@tradle/models": "github:tradle/models",
     "@tradle/pack-models": "^2.0.0",
     "@tradle/validate-model": "^4.1.0",
+    "@tradle/validate-resource": "^2.14.0",
     "eslint": "^3.15.0",
     "eslint-plugin-json": "^1.2.0",
     "git": "^0.1.5",
-    "husky": "^0.13.1"
-  },
-  "dependencies": {
-    "@tradle/models": "github:tradle/models",
-    "@tradle/validate-resource": "^2.14.0",
+    "husky": "^0.13.1",
+    "marked": "^0.3.9",
     "minimist": "^1.2.0",
     "typeforce": "^1.10.6",
     "write-file-atomic": "^1.1.4"
