feat: prevent push to s3 for files that haven't changed

--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
     "build:style": "npm run validate:style",
     "build:botconf": "npm run validate:botconf",
     "build:terms": "npm run validate:terms",
-    "precommit": "npm run build && git add models.json",
+    "precommit": "npm run build && git add ./conf/models.json",
     "deploy": "./scripts/deploy.sh",
-    "deploy:models": "./scripts/push-to-s3.sh conf/models.json",
-    "deploy:style": "./scripts/push-to-s3.sh conf/style.json",
-    "deploy:botconf": "./scripts/push-to-s3.sh conf/bot.json",
-    "deploy:terms": "./scripts/push-to-s3.sh conf/terms-and-conditions.md",
+    "deploy:models": "./scripts/push-to-s3.sh conf/models.json && npm run postdeploy",
+    "deploy:style": "./scripts/push-to-s3.sh conf/style.json && npm run postdeploy",
+    "deploy:botconf": "./scripts/push-to-s3.sh conf/bot.json && npm run postdeploy",
+    "deploy:terms": "./scripts/push-to-s3.sh conf/terms-and-conditions.md && npm run postdeploy",
     "deploy:local": "local=1 npm run deploy",
     "deploy:local:models": "local=1 npm run deploy:models",
     "deploy:local:style": "local=1 npm run deploy:style",
