refactor: save project in .env, rename env vars

--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,2 @@
-bucket=xxxxx-privateconfbucket-xxxxx
-aws_profile=yourAwsProfile
-stack_name=tradle-dev
-#local=1 # uncomment to deploy to your local s3 server at http://localhost:4572 (Localstack)
+awsProfile=yourAwsProfile
+stackName=tradle-dev
