feat: ask for confirmation for operations targeting the remote deployment

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "homepage": "https://github.com/tradle/configure-tradle",
   "dependencies": {
     "@tradle/custom-models": "github:tradle/custom-models",
+    "@tradle/errors": "^1.1.0",
     "@tradle/merge-models": "^2.1.0",
     "@tradle/models": "github:tradle/models",
     "@tradle/models-pack": "^1.1.0",
