--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "@tradle/validate-model": "^5.6.1",
     "@tradle/validate-resource": "^2.16.0",
     "aws-sdk": "^2.181.0",
+    "chalk": "^2.3.1",
     "co": "^4.6.0",
     "commander": "^2.13.0",
+    "debug": "^3.1.0",
     "dotenv": "^4.0.0",
     "eslint": "^3.15.0",
     "eslint-plugin-json": "^1.2.0",
