--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "lodash": "^4.17.4",
     "marked": "^0.3.9",
     "mkdirp": "^0.5.1",
+    "node-fetch": "^2.0.0",
     "pify": "^3.0.0",
     "promptly": "^2.2.0",
     "shelljs": "^0.8.0",
