refactor: webhooks example

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "tradleconf": "./lib/cmd.js"
   },
   "scripts": {
-    "lint": "eslint --quiet --ext .json --ext .js .",
+    "lint": "eslint --quiet --ext .json --ext .js --ignore-path .gitignore .",
     "precommit": "npm run lint"
   },
   "keywords": [
