--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "dotenv": "^4.0.0",
     "eslint": "^3.15.0",
     "eslint-plugin-json": "^1.2.0",
+    "inquirer": "^5.1.0",
     "lodash": "^4.17.4",
     "marked": "^0.3.9",
     "mkdirp": "^0.5.1",
