--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@tradle/errors": "^1.1.0",
     "@tradle/merge-models": "^2.1.0",
     "@tradle/models": "github:tradle/models",
+    "@tradle/models-cloud": "github:tradle/models-cloud",
     "@tradle/models-pack": "^1.1.0",
     "@tradle/qr-schema": "^1.2.0",
     "@tradle/validate-model": "^5.6.1",
