--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "marked": "^0.3.9",
     "mkdirp": "^0.5.1",
     "node-fetch": "^2.0.0",
+    "opn": "^5.3.0",
     "pify": "^3.0.0",
     "promise-retry": "^1.1.1",
     "promptly": "^2.2.0",
