--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "eslint": "^3.15.0",
     "eslint-plugin-json": "^1.2.0",
     "inquirer": "^5.1.0",
+    "lexicographic-semver": "^1.0.0",
     "listr": "^0.13.0",
     "lodash": "^4.17.4",
     "marked": "^0.3.9",
