--- a/package.json
+++ b/package.json
@@ -40,8 +40,8 @@
     "@tradle/qr-schema": "^1.2.0",
     "@tradle/validate-model": "^5.6.1",
     "@tradle/validate-resource": "^2.16.0",
+    "ansi-colors": "^3.1.0",
     "aws-sdk": "^2.181.0",
-    "chalk": "^2.3.1",
     "co": "^4.6.0",
     "commander": "^2.13.0",
     "debug": "^3.1.0",
