--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "pify": "^3.0.0",
     "promise-retry": "^1.1.1",
     "promptly": "^2.2.0",
+    "qrcode": "^1.3.0",
     "shelljs": "^0.8.0",
     "source-map-support": "^0.5.3",
     "tmp": "0.0.33",
