chore: update deps, remove unused deps

--- a/package.json
+++ b/package.json
@@ -31,15 +31,15 @@
   },
   "homepage": "https://github.com/tradle/configure-tradle",
   "dependencies": {
-    "@tradle/custom-models": "github:tradle/custom-models",
     "@tradle/errors": "^1.1.0",
     "@tradle/merge-models": "^2.1.0",
     "@tradle/models": "github:tradle/models",
     "@tradle/models-cloud": "github:tradle/models-cloud",
     "@tradle/models-pack": "^1.1.0",
+    "@tradle/protocol": "^4.2.0",
     "@tradle/qr-schema": "^1.2.0",
-    "@tradle/validate-model": "^5.6.1",
-    "@tradle/validate-resource": "^2.16.0",
+    "@tradle/validate-model": "^7.1.1",
+    "@tradle/validate-resource": "^4.3.0",
     "ansi-colors": "^3.1.0",
     "aws-sdk": "^2.181.0",
     "co": "^4.6.0",
