--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "dotenv": "^4.0.0",
     "eslint": "^3.15.0",
     "eslint-plugin-json": "^1.2.0",
+    "execa": "^1.0.0",
     "inquirer": "^5.1.0",
     "lexicographic-semver": "^1.0.0",
     "listr": "^0.13.0",
