--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   },
   "scripts": {
     "lint": "eslint --quiet --ext .json --ext .js --ignore-path .gitignore .",
-    "precommit": "tsc && lint-staged",
+    "test": "node lib/test",
+    "precommit": "tsc && lint-staged && npm test",
     "prepublish": "tsc",
     "release": "standard-version",
     "release:patch": "standard-version --release-as patch",
@@ -73,7 +74,9 @@
     "@types/node": "^9.4.6",
     "husky": "^0.14.3",
     "lint-staged": "^7.2.0",
-    "standard-version": "github:mvayngrib/standard-version#fixdeps"
+    "sinon": "^7.1.0",
+    "standard-version": "github:mvayngrib/standard-version#fixdeps",
+    "tape": "^4.9.1"
   },
   "lint-staged": {
     "README.md": [
