--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,7 @@
       "lodash"
     ]
   },
-  "include": ["src/*.ts"],
+  "include": ["src/*.ts", "src/test/*.ts"],
   "exclude": ["node_modules", "**/*.js"],
   "compileOnSave": false
 }
