--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "@tradle/models-cloud": "github:tradle/models-cloud",
     "@tradle/models-pack": "^1.1.0",
     "@tradle/protocol": "^4.2.0",
-    "@tradle/qr-schema": "^1.2.0",
+    "@tradle/qr": "github:tradle/qr",
+    "@tradle/qr-schema": "github:tradle/qr-schema",
     "@tradle/validate-model": "^7.1.1",
     "@tradle/validate-resource": "^4.3.0",
     "amazon-s3-uri": "0.0.3",
@@ -62,7 +63,6 @@
     "pify": "^3.0.0",
     "promise-retry": "^1.1.1",
     "promptly": "^2.2.0",
-    "qrcode": "^1.3.0",
     "shelljs": "^0.8.0",
     "source-map-support": "^0.5.3",
     "tmp": "0.0.33",
