chore: add docker scripts

--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "release": "standard-version",
     "release:patch": "standard-version --release-as patch",
     "release:minor": "standard-version --release-as minor",
-    "release:major": "standard-version --release-as major"
+    "release:major": "standard-version --release-as major",
+    "docker:build": "./build-image.sh",
+    "docker:publish": "docker push tradle.conf"
   },
   "keywords": [
     "tradle",
