chore: updating dependencies (colors.js fix)

--- a/package.json
+++ b/package.json
@@ -41,8 +41,8 @@
     "@tradle/models-cloud": "github:tradle/models-cloud",
     "@tradle/models-pack": "^1.1.0",
     "@tradle/protocol": "^5.1.1",
-    "@tradle/qr": "github:tradle/qr",
-    "@tradle/qr-schema": "github:tradle/qr-schema",
+    "@tradle/qr": "^2.1.1",
+    "@tradle/qr-schema": "^3.0.4",
     "@tradle/validate-model": "^7.1.35",
     "@tradle/validate-resource": "^4.3.5",
     "amazon-s3-uri": "0.0.3",
